--- a/Introduction to TF 4 AI, ML, DL/Course_1_Part_6_Lesson_2_Notebook - Imporving CV Accuracy with Convolutions.ipynb
+++ b/Introduction to TF 4 AI, ML, DL/Course_1_Part_6_Lesson_2_Notebook - Imporving CV Accuracy with Convolutions.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sergejhorvat/TensorFlow-in-Practice---Coursera/blob/master/Introduction%20to%20TF%204%20AI%2C%20ML%2C%20DL%5CCourse_1_Part_6_Lesson_2_Notebook%20-%20Imporving%20CV%20Accuracy%20with%20Convolutions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sergejhorvat/TensorFlow-in-Practice---Coursera/blob/master/Introduction%20to%20TF%204%20AI%2C%20ML%2C%20DL/Course_1_Part_6_Lesson_2_Notebook%20-%20Imporving%20CV%20Accuracy%20with%20Convolutions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
