--- a/Convolutional Neural Networks in TensorFlow/Exercise_5_Question_Full_Cats_and_dogs_dataset.ipynb
+++ b/Convolutional Neural Networks in TensorFlow/Exercise_5_Question_Full_Cats_and_dogs_dataset.ipynb
@@ -251,41 +251,64 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 127
+          "height": 219
         },
-        "outputId": "263c9eb3-2e5b-4dd0-e191-dedc1b9b717c"
+        "outputId": "555f7c3d-87d9-4a10-e594-adeb1783f74a"
       },
       "source": [
         "# Use os.mkdir to create your directories\n",
         "# You will need a directory for cats-v-dogs, and subdirectories for training\n",
         "# and testing. These in turn will need subdirectories for 'cats' and 'dogs'\n",
-        "try:\n",
-        "    print(os.getcwd())\n",
-        "    working_dir = '/tmp/PetImages' \n",
-        "    print(\"Changing working directory to: \" + working_dir)\n",
-        "    os.chdir(working_dir)\n",
-        "    print(os.getcwd())\n",
-        "    try:\n",
-        "      os.mkdir(\"training\")\n",
-        "      os.mkdir(\"validation\")\n",
-        "    except FileExistsError:\n",
-        "      # Print if direcorx allready exists\n",
-        "      print(\"Directory allready exists\")  \n",
-        "    print(\"List from working directory: \" + working_dir)\n",
-        "    print(os.listdir(working_dir))\n",
-        "except OSError:\n",
-        "    print(\"Os error!\")\n",
-        "    pass"
+        "def CreateDirectory(directory):\n",
+        "\n",
+        "  # Directory creation\n",
+        "  try:\n",
+        "    os.mkdir(directory)\n",
+        "    print(\"Directory \" , directory ,  \" created.\")\n",
+        "  except FileExistsError:\n",
+        "    # Print if direcorx allready exists\n",
+        "    print(\"Directory \" , directory ,  \" exists.\")  \n",
+        "\n",
+        "# Get to proper path\n",
+        "print(os.getcwd())\n",
+        "working_dir = '/tmp/PetImages'\n",
+        "os.chdir(working_dir)    \n",
+        "print(os.getcwd())\n",
+        "print(\"Changing working directory to: \" + working_dir)\n",
+        "\n",
+        "# directory names\n",
+        "train_dir = 'training'\n",
+        "validation_dir = 'validation'\n",
+        "cats_dir = 'cats'\n",
+        "dogs_dir = 'dogs'\n",
+        "\n",
+        "# Create direcotries\n",
+        "CreateDirectory(train_dir + \"/\" + cats_dir)\n",
+        "CreateDirectory(train_dir + \"/\" + cats_dir)\n",
+        "CreateDirectory(train_dir + \"/\" + dogs_dir)\n",
+        "\n",
+        "\n",
+        "CreateDirectory(validation_dir)\n",
+        "CreateDirectory(validation_dir + \"/\" + cats_dir)\n",
+        "CreateDirectory(validation_dir + \"/\" + dogs_dir)\n",
+        "\n",
+        "print(\"List from working directory: \" + working_dir)\n",
+        "print(os.listdir(working_dir))"
       ],
-      "execution_count": 18,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "/tmp/PetImages\n",
-            "Changing working directory to: /tmp/PetImages\n",
             "/tmp/PetImages\n",
-            "Directory allready exists\n",
+            "Changing working directory to: /tmp/PetImages\n",
+            "Directory  training/cats  exists.\n",
+            "Directory  training/cats  exists.\n",
+            "Directory  training/dogs  exists.\n",
+            "Directory  validation  exists.\n",
+            "Directory  validation/cats  exists.\n",
+            "Directory  validation/dogs  exists.\n",
             "List from working directory: /tmp/PetImages\n",
             "['training', 'Dog', 'Cat', 'validation']\n"
           ],
@@ -320,6 +343,7 @@
         "# random.sample(list, len(list)) shuffles a list\n",
         "def split_data(SOURCE, TRAINING, TESTING, SPLIT_SIZE):\n",
         "# YOUR CODE STARTS HERE\n",
+        "\n",
         "# YOUR CODE ENDS HERE\n",
         "\n",
         "\n",
