--- a/Convolutional Neural Networks in TensorFlow/Exercise_5_Question_Full_Cats_and_dogs_dataset.ipynb
+++ b/Convolutional Neural Networks in TensorFlow/Exercise_5_Question_Full_Cats_and_dogs_dataset.ipynb
@@ -170,7 +170,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 239
+          "height": 219
         },
         "outputId": "78091295-d81b-4242-c235-01ba490411a6"
       },
@@ -251,9 +251,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 219
+          "height": 237
         },
-        "outputId": "555f7c3d-87d9-4a10-e594-adeb1783f74a"
+        "outputId": "8d8ff50b-2068-4ebf-a02b-cfa673758021"
       },
       "source": [
         "# Use os.mkdir to create your directories\n",
@@ -271,46 +271,49 @@
         "\n",
         "# Get to proper path\n",
         "print(os.getcwd())\n",
-        "working_dir = '/tmp/PetImages'\n",
+        "working_dir = '/tmp'\n",
         "os.chdir(working_dir)    \n",
         "print(os.getcwd())\n",
         "print(\"Changing working directory to: \" + working_dir)\n",
         "\n",
         "# directory names\n",
+        "root_dir = 'cats-v-dogs'\n",
         "train_dir = 'training'\n",
-        "validation_dir = 'validation'\n",
+        "validation_dir = 'testing'\n",
         "cats_dir = 'cats'\n",
         "dogs_dir = 'dogs'\n",
         "\n",
         "# Create direcotries\n",
-        "CreateDirectory(train_dir + \"/\" + cats_dir)\n",
-        "CreateDirectory(train_dir + \"/\" + cats_dir)\n",
-        "CreateDirectory(train_dir + \"/\" + dogs_dir)\n",
+        "CreateDirectory(root_dir)\n",
         "\n",
+        "CreateDirectory(root_dir + \"/\" + train_dir)\n",
+        "CreateDirectory(root_dir + \"/\" + train_dir + \"/\" + cats_dir)\n",
+        "CreateDirectory(root_dir + \"/\" + train_dir + \"/\" + dogs_dir)\n",
         "\n",
-        "CreateDirectory(validation_dir)\n",
-        "CreateDirectory(validation_dir + \"/\" + cats_dir)\n",
-        "CreateDirectory(validation_dir + \"/\" + dogs_dir)\n",
+        "CreateDirectory(root_dir + \"/\" + validation_dir)\n",
+        "CreateDirectory(root_dir + \"/\" + validation_dir + \"/\" + cats_dir)\n",
+        "CreateDirectory(root_dir + \"/\" + validation_dir + \"/\" + dogs_dir)\n",
         "\n",
         "print(\"List from working directory: \" + working_dir)\n",
-        "print(os.listdir(working_dir))"
+        "print(os.listdir(working_dir))\n"
       ],
-      "execution_count": 28,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "/tmp/PetImages\n",
-            "/tmp/PetImages\n",
-            "Changing working directory to: /tmp/PetImages\n",
-            "Directory  training/cats  exists.\n",
-            "Directory  training/cats  exists.\n",
-            "Directory  training/dogs  exists.\n",
-            "Directory  validation  exists.\n",
-            "Directory  validation/cats  exists.\n",
-            "Directory  validation/dogs  exists.\n",
-            "List from working directory: /tmp/PetImages\n",
-            "['training', 'Dog', 'Cat', 'validation']\n"
+            "/tmp\n",
+            "Changing working directory to: /tmp\n",
+            "Directory  cats-v-dogs  created.\n",
+            "Directory  cats-v-dogs/training  created.\n",
+            "Directory  cats-v-dogs/training/cats  created.\n",
+            "Directory  cats-v-dogs/training/dogs  created.\n",
+            "Directory  cats-v-dogs/testing  created.\n",
+            "Directory  cats-v-dogs/testing/cats  created.\n",
+            "Directory  cats-v-dogs/testing/dogs  created.\n",
+            "List from working directory: /tmp\n",
+            "['MSR-LA - 3467.docx', 'PetImages', 'cats-and-dogs.zip', 'readme[1].txt', 'cats-v-dogs']\n"
           ],
           "name": "stdout"
         }
@@ -343,7 +346,6 @@
         "# random.sample(list, len(list)) shuffles a list\n",
         "def split_data(SOURCE, TRAINING, TESTING, SPLIT_SIZE):\n",
         "# YOUR CODE STARTS HERE\n",
-        "\n",
         "# YOUR CODE ENDS HERE\n",
         "\n",
         "\n",
