--- a/Convolutional Neural Networks in TensorFlow/Exercise_7_Question - Transfer Learning.ipynb
+++ b/Convolutional Neural Networks in TensorFlow/Exercise_7_Question - Transfer Learning.ipynb
@@ -902,7 +902,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "ef304bb7-1c20-469d-99af-2fb491859eed"
+        "outputId": "05fcabae-b2e3-49c2-beb0-454ef2640da7"
       },
       "source": [
         "from tensorflow.keras.optimizers import RMSprop\n",
@@ -912,7 +912,7 @@
         "# Add a fully connected layer with 1,024 hidden units and ReLU activation\n",
         "x = layers.Dense(units=1024, activation='relu' )(x)# Your Code Here\n",
         "# Add a dropout rate of 0.2\n",
-        "x = layers.Dropout(rate=0.2)(x)   # Your Code Here               \n",
+        "x = layers.Dropout(rate=0.3)(x)   # Your Code Here               \n",
         "# Add a final sigmoid layer for classification\n",
         "x = layers.Dense(units=1, activation='sigmoid')(x)    # Your Code Here       \n",
         "\n",
@@ -944,12 +944,12 @@
         "# Trainable params: 38,537,217\n",
         "# Non-trainable params: 8,975,264\n"
       ],
-      "execution_count": 8,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"model_1\"\n",
+            "Model: \"model_2\"\n",
             "__________________________________________________________________________________________________\n",
             "Layer (type)                    Output Shape         Param #     Connected to                     \n",
             "==================================================================================================\n",
@@ -1434,13 +1434,13 @@
             "                                                                 activation_68[0][0]              \n",
             "                                                                 activation_69[0][0]              \n",
             "__________________________________________________________________________________________________\n",
-            "flatten_1 (Flatten)             (None, 37632)        0           mixed7[0][0]                     \n",
+            "flatten_2 (Flatten)             (None, 37632)        0           mixed7[0][0]                     \n",
             "__________________________________________________________________________________________________\n",
-            "dense_2 (Dense)                 (None, 1024)         38536192    flatten_1[0][0]                  \n",
+            "dense_4 (Dense)                 (None, 1024)         38536192    flatten_2[0][0]                  \n",
             "__________________________________________________________________________________________________\n",
-            "dropout_1 (Dropout)             (None, 1024)         0           dense_2[0][0]                    \n",
+            "dropout_2 (Dropout)             (None, 1024)         0           dense_4[0][0]                    \n",
             "__________________________________________________________________________________________________\n",
-            "dense_3 (Dense)                 (None, 1)            1025        dropout_1[0][0]                  \n",
+            "dense_5 (Dense)                 (None, 1)            1025        dropout_2[0][0]                  \n",
             "==================================================================================================\n",
             "Total params: 47,512,481\n",
             "Trainable params: 38,537,217\n",
@@ -1456,11 +1456,7 @@
       "metadata": {
         "id": "HrnL_IQ8knWA",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 441
-        },
-        "outputId": "d8891aad-5b5f-439c-c922-5837c3c8a7cd"
+        "colab": {}
       },
       "source": [
         "# Get the Horse or Human dataset\n",
@@ -1484,48 +1480,15 @@
         "zip_ref.extractall('/tmp/validation')\n",
         "zip_ref.close()"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "--2019-11-15 09:09:31--  https://storage.googleapis.com/laurencemoroney-blog.appspot.com/horse-or-human.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.133.128, 2a00:1450:400c:c09::80\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.133.128|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 149574867 (143M) [application/zip]\n",
-            "Saving to: ‘/tmp/horse-or-human.zip’\n",
-            "\n",
-            "/tmp/horse-or-human 100%[===================>] 142.65M  76.5MB/s    in 1.9s    \n",
-            "\n",
-            "2019-11-15 09:09:33 (76.5 MB/s) - ‘/tmp/horse-or-human.zip’ saved [149574867/149574867]\n",
-            "\n",
-            "--2019-11-15 09:09:35--  https://storage.googleapis.com/laurencemoroney-blog.appspot.com/validation-horse-or-human.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.133.128, 2a00:1450:400c:c09::80\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.133.128|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 11480187 (11M) [application/zip]\n",
-            "Saving to: ‘/tmp/validation-horse-or-human.zip’\n",
-            "\n",
-            "/tmp/validation-hor 100%[===================>]  10.95M  --.-KB/s    in 0.07s   \n",
-            "\n",
-            "2019-11-15 09:09:35 (148 MB/s) - ‘/tmp/validation-horse-or-human.zip’ saved [11480187/11480187]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "y9okX7_ovskI",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 90
-        },
-        "outputId": "628e3cb1-4f72-44b4-b318-fecf0658b710"
+        "colab": {}
       },
       "source": [
         "# Your Code Here\n",
@@ -1552,19 +1515,8 @@
         "# 128\n",
         "# 128"
       ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "total training horse images: 500\n",
-            "total training human images: 527\n",
-            "total validation horse images: 128\n",
-            "total validation human images: 128\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1579,16 +1531,33 @@
         "validation_dir = '/tmp/validation'\n",
         "\n",
         "# Add our data-augmentation parameters to ImageDataGenerator\n",
-        "train_datagen = ImageDataGenerator(# Your Code Here)\n",
+        "train_datagen = ImageDataGenerator(rescale = 1.0/255.,\n",
+        "    zca_epsilon=1e-6,\n",
+        "    zca_whitening = False,\n",
+        "    rotation_range = 40,\n",
+        "    width_shift_range=0.2,\n",
+        "    height_shift_range=0.2,\n",
+        "    shear_range=0.2,\n",
+        "    zoom_range=0.2,\n",
+        "    horizontal_flip=True,\n",
+        "    fill_mode='nearest') \n",
         "\n",
         "# Note that the validation data should not be augmented!\n",
-        "test_datagen = ImageDataGenerator(# Your Code Here )\n",
+        "test_datagen = ImageDataGenerator(rescale = 1.0/255.)\n",
         "\n",
         "# Flow training images in batches of 20 using train_datagen generator\n",
-        "train_generator = train_datagen.flow_from_directory(# Your Code Here)     \n",
+        "train_generator = train_datagen.flow_from_directory(train_dir,\n",
+        "                                                    batch_size=20,\n",
+        "                                                    class_mode='binary',\n",
+        "                                                    target_size=(150,150)\n",
+        "                                                    )    \n",
         "\n",
         "# Flow validation images in batches of 20 using test_datagen generator\n",
-        "validation_generator =  test_datagen.flow_from_directory( # Your Code Here)\n",
+        "validation_generator = train_datagen.flow_from_directory(validation_dir,\n",
+        "                                                    batch_size=20,\n",
+        "                                                    class_mode='binary',\n",
+        "                                                    target_size=(150,150)\n",
+        "                                                    )\n",
         "\n",
         "# Expected Output:\n",
         "# Found 1027 images belonging to 2 classes.\n",
@@ -1609,8 +1578,15 @@
         "# fires, and stops training at 99.9% accuracy\n",
         "# (It should take less than 100 epochs)\n",
         "\n",
-        "callbacks = # Your Code Here\n",
-        "history = model.fit_generator(# Your Code Here)"
+        "callbacks = myCallback()\n",
+        "history = model.fit_generator(\n",
+        "            train_generator,\n",
+        "            validation_data = validation_generator,\n",
+        "            steps_per_epoch = 100,\n",
+        "            epochs = 100,\n",
+        "            validation_steps = 50,\n",
+        "            callback = callbacks,\n",
+        "            verbose = 2)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1639,6 +1615,19 @@
         "\n",
         "\n",
         "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "koDPVvf6GXVH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
