--- a/Convolutional Neural Networks in TensorFlow/Exercise_8_Question.ipynb
+++ b/Convolutional Neural Networks in TensorFlow/Exercise_8_Question.ipynb
@@ -261,7 +261,7 @@
       "metadata": {
         "id": "4kxw-_rmcnVu",
         "colab_type": "code",
-        "outputId": "d5252bb9-a49d-474e-88b5-f2ab07a3459b",
+        "outputId": "c9015d46-bf76-4333-b4af-47ac7623bc6f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 90
@@ -292,6 +292,7 @@
         "  data = genfromtxt(filename, delimiter=',')\n",
         "  labels = data[1:,0]\n",
         "  images = data[1:,1:785]\n",
+        "  images = images.reshape((images.shape[0], 28, 28))\n",
         "\n",
         "  return images, labels\n",
         "\n",
@@ -311,15 +312,15 @@
         "# (7172, 28, 28)\n",
         "# (7172,)"
       ],
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(27456, 784)\n",
-            "(27456,)\n",
-            "(7173, 784)\n",
-            "(7173,)\n"
+            "(27455, 28, 28)\n",
+            "(27455,)\n",
+            "(7172, 28, 28)\n",
+            "(7172,)\n"
           ],
           "name": "stdout"
         }
