--- a/Natural Language Processing in TensorFlow/Week 1 - Lesson 2.ipynb
+++ b/Natural Language Processing in TensorFlow/Week 1 - Lesson 2.ipynb
@@ -1,1 +1,137 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"Course 3 - Week 1 - Lesson 2.ipynb","version":"0.3.2","provenance":[],"collapsed_sections":[]},"kernelspec":{"name":"python3","display_name":"Python 3"}},"cells":[{"cell_type":"code","metadata":{"id":"ArOPfBwyZtln","colab_type":"code","colab":{}},"source":["import tensorflow as tf\n","from tensorflow import keras\n","\n","\n","from tensorflow.keras.preprocessing.text import Tokenizer\n","from tensorflow.keras.preprocessing.sequence import pad_sequences\n","\n","sentences = [\n","    'I love my dog',\n","    'I love my cat',\n","    'You love my dog!',\n","    'Do you think my dog is amazing?'\n","]\n","\n","tokenizer = Tokenizer(num_words = 100, oov_token=\"<OOV>\")\n","tokenizer.fit_on_texts(sentences)\n","word_index = tokenizer.word_index\n","\n","sequences = tokenizer.texts_to_sequences(sentences)\n","\n","padded = pad_sequences(sequences, maxlen=5)\n","print(\"\\nWord Index = \" , word_index)\n","print(\"\\nSequences = \" , sequences)\n","print(\"\\nPadded Sequences:\")\n","print(padded)\n","\n","\n","# Try with words that the tokenizer wasn't fit to\n","test_data = [\n","    'i really love my dog',\n","    'my dog loves my manatee'\n","]\n","\n","test_seq = tokenizer.texts_to_sequences(test_data)\n","print(\"\\nTest Sequence = \", test_seq)\n","\n","padded = pad_sequences(test_seq, maxlen=10)\n","print(\"\\nPadded Test Sequence: \")\n","print(padded)"],"execution_count":0,"outputs":[]}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "Course 3 - Week 1 - Lesson 2.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sergejhorvat/TensorFlow-in-Practice---Coursera/blob/master/Natural%20Language%20Processing%20in%20TensorFlow/Week%201%20-%20Lesson%202.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ArOPfBwyZtln",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 359
+        },
+        "outputId": "debdc330-b429-42d8-f1ba-1cc3172439d4"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "\n",
+        "\n",
+        "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+        "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+        "\n",
+        "sentences = [\n",
+        "    'I love my dog',\n",
+        "    'I love my cat',\n",
+        "    'You love my dog!',\n",
+        "    'Do you think my dog is amazing?'\n",
+        "]\n",
+        "\n",
+        "tokenizer = Tokenizer(num_words = 100, oov_token=\"<OOV>\")\n",
+        "tokenizer.fit_on_texts(sentences)\n",
+        "word_index = tokenizer.word_index\n",
+        "\n",
+        "sequences = tokenizer.texts_to_sequences(sentences)\n",
+        "\n",
+        "padded = pad_sequences(sequences, maxlen=5)\n",
+        "print(\"\\nWord Index = \" , word_index)\n",
+        "print(\"\\nSequences = \" , sequences)\n",
+        "print(\"\\nPadded Sequences:\")\n",
+        "print(padded)\n",
+        "\n",
+        "\n",
+        "# Try with words that the tokenizer wasn't fit to\n",
+        "test_data = [\n",
+        "    'i really love my dog',\n",
+        "    'my dog loves my manatee'\n",
+        "]\n",
+        "\n",
+        "test_seq = tokenizer.texts_to_sequences(test_data)\n",
+        "print(\"\\nTest Sequence = \", test_seq)\n",
+        "\n",
+        "padded = pad_sequences(test_seq, maxlen=10)\n",
+        "print(\"\\nPadded Test Sequence: \")\n",
+        "print(padded)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<p style=\"color: red;\">\n",
+              "The default version of TensorFlow in Colab will soon switch to TensorFlow 2.x.<br>\n",
+              "We recommend you <a href=\"https://www.tensorflow.org/guide/migrate\" target=\"_blank\">upgrade</a> now \n",
+              "or ensure your notebook will continue to use TensorFlow 1.x via the <code>%tensorflow_version 1.x</code> magic:\n",
+              "<a href=\"https://colab.research.google.com/notebooks/tensorflow_version.ipynb\" target=\"_blank\">more info</a>.</p>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Word Index =  {'<OOV>': 1, 'my': 2, 'love': 3, 'dog': 4, 'i': 5, 'you': 6, 'cat': 7, 'do': 8, 'think': 9, 'is': 10, 'amazing': 11}\n",
+            "\n",
+            "Sequences =  [[5, 3, 2, 4], [5, 3, 2, 7], [6, 3, 2, 4], [8, 6, 9, 2, 4, 10, 11]]\n",
+            "\n",
+            "Padded Sequences:\n",
+            "[[ 0  5  3  2  4]\n",
+            " [ 0  5  3  2  7]\n",
+            " [ 0  6  3  2  4]\n",
+            " [ 9  2  4 10 11]]\n",
+            "\n",
+            "Test Sequence =  [[5, 1, 3, 2, 4], [2, 4, 1, 2, 1]]\n",
+            "\n",
+            "Padded Test Sequence: \n",
+            "[[0 0 0 0 0 5 1 3 2 4]\n",
+            " [0 0 0 0 0 2 4 1 2 1]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3yqUhKrRU1ht",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    }
+  ]
+}
