--- a/Natural Language Processing in TensorFlow/Week_2_Exercise_Question.ipynb
+++ b/Natural Language Processing in TensorFlow/Week_2_Exercise_Question.ipynb
@@ -336,14 +336,18 @@
       "metadata": {
         "id": "XkWiQ_FKZNp2",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 164
+        },
+        "outputId": "d1cb3724-3265-4c53-ac74-42f9d4f32570"
       },
       "source": [
-        "label_tokenizer = # YOUR CODE HERE\n",
-        "label_tokenizer.fit_on_texts(# YOUR CODE HERE)\n",
+        "label_tokenizer = Tokenizer()     # YOUR CODE HERE\n",
+        "label_tokenizer.fit_on_texts(labels)    # YOUR CODE HERE\n",
         "\n",
-        "training_label_seq = # YOUR CODE HERE\n",
-        "validation_label_seq = # YOUR CODE HERE\n",
+        "training_label_seq = np.array(label_tokenizer.texts_to_sequences(train_labels))# YOUR CODE HERE\n",
+        "validation_label_seq = np.array(label_tokenizer.texts_to_sequences(validation_labels)) # YOUR CODE HERE\n",
         "\n",
         "print(training_label_seq[0])\n",
         "print(training_label_seq[1])\n",
@@ -365,8 +369,23 @@
         "# [3]\n",
         "# (445, 1)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[4]\n",
+            "[2]\n",
+            "[1]\n",
+            "(1780, 1)\n",
+            "[5]\n",
+            "[4]\n",
+            "[3]\n",
+            "(445, 1)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -376,8 +395,10 @@
         "colab": {}
       },
       "source": [
-        "model = tf.keras.Sequential([\n",
-        "# YOUR CODE HERE\n",
+        "model = tf.keras.Sequential([# YOUR CODE HERE\n",
+        "                             tf.keras.layers.Embedding(tokanizer.vocab_size)\n",
+        "                             \n",
+        "\n",
         "])\n",
         "model.compile(loss='sparse_categorical_crossentropy',optimizer='adam',metrics=['accuracy'])\n",
         "model.summary()\n",
